README_CORRECAO_LAYOUT_FIGURINHAS.txt
Correção aplicada:
- corrigido bug do texto repetindo por trás das figurinhas;
- agora são exatamente 3 figurinhas por página;
- cards maiores, verticais e com imagem inteira;
- texto único em 2 linhas acima dos cards;
- barra superior sem texto duplicado;
- status no topo e rodapé oculto;
- simulado no modelo anterior mantido;
- game, áudios e Supabase mantidos;
- verificação do JavaScript: /mnt/data/work_fix_layout_bug_final/ALBUM_DUPLA_EXCLUSAO_MUNICIPAL_36_SUPABASE_COMPLETO/script.js:201
function paginaAnterior(){ playAudio("click"); if(paginaAtual>1){paginaAtual--; renderAlbum()} } }
                                                                                                 ^

SyntaxError: Unexpected token '}'
[90m    at wrapSafe (node:internal/modules/cjs/loader:1662:18)[39m
[90m    at checkSyntax (node:internal/main/check_syntax:78:3)[39m

Node.js v22.16.0
.
